--- a/day3-js闭包题和计时器模块/index.html
+++ b/day3-js闭包题和计时器模块/index.html
@@ -14,17 +14,24 @@
 </body>
 <script>
 for(var i = 0;i <= 3 ;i++){
-	setTimeout(function(){
+	setTimeout(timeout(i),0);
+}
+
+function timeout(i){
 		console.log('test'+i);
-	},0);
 }
 
 var _ul = document.getElementsByTagName('ul');
 var _lis = _ul[0].children;
 for(var j = 0; j < _lis.length;j++){
-	_lis[j].onclick = function(){
+	_lis[j].onclick = handleClick(j);
+}
+
+function handleClick(j) {
+	return function(){
 		alert(j);
 	}
+
 }
 
 
@@ -36,31 +43,55 @@ for(var j = 0; j < _lis.length;j++){
 // console.log(flag);
 
 for(var x=0;x<5;x++){
-    setTimeout(function(){
-         console.log('delayer:' + x );
-    }, 0);
+    setTimeout((function(x){
+				return function(){
+					console.log('delayer:' + x );
+				}
+    })(x), 0);
     console.log(x);
 }
 
-var tmp = new Array();
-var v = new Array();
-for (i = 0; i < 2; i++) {
-   var j = 0;
-   tmp[i] = setInterval((function (i) {
-    	return function(){
-				console.log(i);
-				console.log(j);
-      	if (j < 10 + (i * 5)) {
-           console.log(i+ '..' + j);
-            j++;
-        } else {
-            clearInterval(tmp[i])
-        }
-      }
-    })(i), 1000);
-}
+// var tmp = new Array();
+// var v = new Array();
+// for (i = 0; i < 2; i++) {
+//    var j = 0;
+//    tmp[i] = setInterval((function (i) {
+//     	return function(){
+// 				console.log(i);
+// 				console.log(j);
+//       	if (j < 10 + (i * 5)) {
+//            console.log(i+ '..' + j);
+//             j++;
+//         } else {
+//             clearInterval(tmp[i])
+//         }
+//       }
+//     })(i), 1000);
+// }
 
-console.log(tmp);
+// console.log(tmp);
+
+// var tmp = new Array();
+// var v = new Array();
+// for (i = 0; i < 2; i++) {
+//    var j = 0;
+//    tmp[i] = set(i);
+// }
+//
+// function set(i){
+// 		setInterval(function(){
+// 			if (j < 10 + (i * 5)) {
+// 				 console.log(i+ '..' + j);
+// 					j++;
+// 			} else {
+// 					clearInterval(tmp[i]);
+// 			}
+// 		},1000);
+// }
+//
+// console.log(tmp);
+
+
 </script>
 <script src="time.js"></script>
 </html>
