--- a/vue-use.html
+++ b/vue-use.html
@@ -15,6 +15,9 @@
     <div id="test">
         hello {{world}}
     </div>
+    <div id="test2">
+        hello {{world}}
+    </div>
 </body>
 <script src="https://unpkg.com/vue"></script>
 <script src="./vue-use.js"></script>
