--- a/css/rem.html
+++ b/css/rem.html
@@ -58,7 +58,7 @@
 
     </iframe> -->
     <div>
-        summer:
+        summary:
          在chrome中，将页面分割成100份并不可行，因为chrome能用最小为12px,推荐还是10分，12分这种吧。。。
     </div>
 </body>
