--- a/svg动画/svg.html
+++ b/svg动画/svg.html
@@ -61,6 +61,10 @@
 <svg width="100%" height="300" version="1.1" xmlns="http://www.w3.org/2000/svg">
     <polygon points="220,100 300,210 170,250 123,234" style="fill:#cccccc; stroke:#000000;stroke-width:1"/>
 </svg>
+<svg width="200" height="200" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
+    <polygon points="48,16 16,96 96,48 0,48 80, 96" style="fill-rule: evenodd;fill:#cccccc; stroke:#000000;stroke-width:1"/>
+</svg>
+
 折现
 <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg">
     <polyline points="0,0 0,20 20,20 20,40 40,40 40,60" style="fill:white;stroke:red;stroke-width:2"/>
