feat: finish first element.js

--- a/utils/libs/vue/virtual-dom.html
+++ b/utils/libs/vue/virtual-dom.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src= './virtual-dom.js'></script>
+    <title>Document</title>   
 </head>
 <body>
-    
+    使用parcel 启用
+    <div id="app"></div>
+    <div id="test">
+        helle  
+        <p>ddddd</p>
+        <p>dddddddddd</p>
+    </div>
 </body>
-
+<script src= './virtual-dom.js'></script>
 </html>
