feat: fileupload.js

--- a/utils/index.html
+++ b/utils/index.html
@@ -5,23 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="./fileUpload.js">
+    </script>
 </head>
 <body>
-    
+    <div id="preview">
+        
+    </div> 
 </body>
-<script>
- Object.prototype.log = function () {
-    console.log('ddddd');
- }
 
- var a = {};
- console.log('a', a);
- 
- a.log();
-
-
- var vue = Object.create(null);
- console.log('vue', vue);
-
-</script>
 </html>
