--- a/utils/index.html
+++ b/utils/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="./fileUpload.js">
-    </script>
+    <script src="./fileUpload.js"></script>
+    <script src='./socket.js'></script>
+    
 </head>
 <body>
-    <div id="preview">
-        
-    </div> 
+    <button id="preview">
+        hello fileUpload
+    </button> 
 </body>
 
 </html>
