feat: finish websocket server and client

--- a/utils/index.html
+++ b/utils/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="./fileUpload.js"></script>
-    <script src='./socket.js'></script>
+   
     
 </head>
 <body>
     <button id="preview">
         hello fileUpload
     </button> 
-</body>
 
+    <button id="send">
+        send Message
+    </button>
+</body>
+<script src='./socket.js'></script>
 </html>
