feat: update 静态服务器

--- a/node/static/index.html
+++ b/node/static/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     for static server
+    <img id ="img">
 </body>
+<script>
+    
+    setTimeout(function() {
+        var img =  document.getElementById('img');
+        img.src = './image.jpg';
+      },0);
+
+</script>
 </html>
